# gmail-cleanup

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  README.md  ROADMAP.md  TROUBLESHOOTING.md  gmail_cli.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
docs/superpowers/plans/: 2026-05-15-gmail-cleanup-v0.5.md
docs/superpowers/specs/: 2026-05-15-gmail-cleanup-v0.5-design.md
gmail_cleanup/: __init__.py  accounts.py  config.py  lists_io.py  progress.py  scheduler.py  setup_wizard.py  state.py
lists/: README.md  humans.yaml  keep.yaml  kill.yaml  unsubbed.yaml
tests/: conftest.py  test_accounts.py  test_attachments_parse.py  test_config.py  test_credentials_search.py  test_helpers.py  test_lists.py  test_lists_auto_append.py  test_multi_account_dispatch.py  test_safety.py  test_state.py
